# rust-paper-research

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: determinant.h  err.h  main.h  mat_mul.h
cpp/src/: determinant.cpp  err.cpp  main.cpp  mat_mul.cpp
rust/: Cargo.toml  getAvg.py  getDetTime.py
rust/src/: main.rs
rust/src/determinant/: mod.rs
rust/src/matrix_multiplication/: mod.rs
